--- a/package.json
+++ b/package.json
@@ -1,19 +1,31 @@
 {
   "name": "dotnetelectron",
-  "version": "1.0.0",
+  "version": "3.0.0",
   "description": "For test dotnet with electron",
   "main": "main.js",
   "dependencies": {
-    "electron": "^2.0.8"
+    "dotenv": "^5.0.1",
+    "electron-is-dev": "^0.3.0",
+    "electron-settings": "^3.1.2",
+    "electron-packager": "^12.1.1",
+    "electron-updater": "^2.21.0",
+    "update-electron-app": "^1.3.0"
   },
   "devDependencies": {
+    "electron": "^2.0.8",
+    "electron-builder": "^20.28.3",
+    "electron-winstaller": "^2.6.4",
     "foreman": "^3.0.1"
   },
   "scripts": {
-    "dev" : "nf start",
+    "dev": "nf start",
     "electron": "electron .",
     "electron-start": "node electron-wait-dotnet",
-    "electron-dev": "ELECTRON_START_URL=http://localhost:5001 electron ."
+    "electron-dev": "ELECTRON_START_URL=http://localhost:5001 electron .",
+    "build:package": "electron-packager . DotnetElectron --platform=win32 --arch=x64 --out=release/package",
+    "build:winstaller": "node build.js",
+    "build": "npm run build:package && npm run build:winstaller",
+    "ship": "build --win -p always"
   },
   "repository": {
     "type": "git",
@@ -26,4 +38,3 @@
   },
   "homepage": "./"
 }
-
